--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           tags:  ${{ steps.meta.outputs.tags }}
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
       -
         name: push build
@@ -52,5 +52,5 @@ jobs:
         with:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
